MIPS: JZ4770: GCW0: Full defconfig
This is similar to the OpenDingux Dingoo A320 defconfig, but adapted
to the GCW Zero hardware.

There used to be a qemu config as well, but that was dropped in
jz-3.17 because it was unmaintained. It was still present in jz-3.16
but not fully working anymore at that point.

In 3.17 the following options were disabled under the assumption no
applications depend on them: CONFIG_SYSVIPC and CONFIG_LEGACY_PTYS.

Squashed in transition from 3.19 to 4.0:
- USB gadget started using configfs
- put mininit on system partition instead of in initframfs
- enabled kexec syscall

Squashed in transition from 4.1 to 4.2:
- enable ohci-platform driver
- drop kernel command line override
- switch ACT8600 driver
- switch to mainline WiFi drivers

Squashed in transition from 4.2 to 4.5:
- build all wifi support as modules to reduce kernel size
- enable high-resolution timers

--- a/arch/mips/configs/gcw0_defconfig
+++ b/arch/mips/configs/gcw0_defconfig
@@ -7,7 +7,7 @@ CONFIG_PREEMPT_VOLUNTARY=y
 CONFIG_KEXEC=y
 # CONFIG_SECCOMP is not set
 CONFIG_CROSS_COMPILE="mipsel-gcw0-linux-uclibc-"
-CONFIG_LOCALVERSION="-opendingux"
+CONFIG_LOCALVERSION="-dingux"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="gcw-zero"
 # CONFIG_CROSS_MEMORY_ATTACH is not set
@@ -74,13 +74,17 @@ CONFIG_RTL8XXXU_UNTESTED=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=320
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=240
+CONFIG_INPUT_LINKDEV=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
+CONFIG_JOYSTICK_JZ_SADC=y
+CONFIG_JOYSTICK_MXC6225=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_PWM_HAPTIC=y
 # CONFIG_SERIO is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -95,15 +99,19 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_SUPPLY=y
+CONFIG_BATTERY_JZ4770=y
 CONFIG_CHARGER_GPIO=y
 # CONFIG_HWMON is not set
 CONFIG_WATCHDOG=y
+CONFIG_JZ4740_WDT=y
+CONFIG_MFD_JZ4770_ADC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ACT8865=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
+CONFIG_RADIO_RDA5807=y
 # CONFIG_MEDIA_TUNER_SIMPLE is not set
 # CONFIG_MEDIA_TUNER_TDA8290 is not set
 # CONFIG_MEDIA_TUNER_TDA827X is not set
@@ -142,12 +150,15 @@ CONFIG_MEDIA_RADIO_SUPPORT=y
 # CONFIG_DVB_TUNER_DIB0070 is not set
 # CONFIG_DVB_TUNER_DIB0090 is not set
 CONFIG_FB=y
+CONFIG_FB_JZ4770=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_BACKLIGHT_PWM=y
+CONFIG_PANEL_NT39016=y
+CONFIG_GPU_VIVANTE_V4=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_DUMMY_CONSOLE_COLUMNS=53
 CONFIG_DUMMY_CONSOLE_ROWS=24
@@ -156,6 +167,7 @@ CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
 # CONFIG_LOGO_LINUX_CLUT224 is not set
+CONFIG_LOGO_GCWZERO_CLUT224=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SEQUENCER=y
@@ -171,6 +183,8 @@ CONFIG_USB_OTG=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_MUSB_HDRC=y
+CONFIG_USB_MUSB_JZ4770=y
+CONFIG_USB_INVENTRA_DMA=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_CONFIGFS=y
@@ -186,10 +200,13 @@ CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_PROC is not set
+CONFIG_RTC_DRV_JZ4740=y
+CONFIG_DMA_JZ4740=y
 CONFIG_STAGING=y
 CONFIG_R8188EU=m
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_PWM=y
+CONFIG_PWM_JZ4740=y
 CONFIG_EXT4_FS=y
 # CONFIG_DNOTIFY is not set
 CONFIG_VFAT_FS=y
