MIPS: Add support for JZ4770 SoC from Ingenic
Taken from linux-2.6.31.3-jz-20110809-FR1.patch.gz, heavily stripped.
I removed support for all components that our project does not need.

The changes related to kprobe and single stepping were not included.

Various updates to for example the clock and interrupt subsystems were
squashed into this commit.

Moved power off routine from pm.c to reset.c: we want to be able to
power off the hardware even if suspend and runtime power management
are not enabled. The JZ4740 power off routine is in reset.c, so moved
the JZ4770 one there as well.

Added config option for /proc/jz: I don't want to remove this code
just yet, but I don't want it enabled on production kernels either.

Squashed from the jz-3.7 branch:

Declare jz_pm_init() in its own header. It was declared in the CPM
header, but it doesn't belong there.

Don't preserve MSC LPM register on sleep. The MSC driver already
re-inits the LPM register if needed.

Split LCD controller I/O space into 3 regions. This allows the TV
encoder resources to be claimed separately from the others.

Eliminate use of the JZ_MSC_ID_INVALID macro.

Various cleanups in the DMA and MSC headers.

Round requested clock rates down: if an exact match is not possible,
a lower clock rate is more likely to be useful than a higher clock
rate, so round the rate down.

Added highmem support by replacing cache flush code from the Linux
2.6.31.3 patch with code from Ingenic's 3.0.23 Android kernel.

Squashed from the jz-3.9 branch:

Removed timer interrupt test code and the hook it used.

Detach MSC platform data from platform code.
The platform code didn't need the actual data inside the struct, but
it still depended on the header. That dependency was removed and the
header is no longer included by the platform code.
Handle MSC platform/board interface same as other devices.

Use register definitions from generic UART header.
Added jz4740_serial_out() as a hack to make the UART work.
Removed definitio

--- a/arch/mips/jz4740/Makefile
+++ b/arch/mips/jz4740/Makefile
@@ -4,10 +4,12 @@
 
 # Object file lists.
 
-obj-y += prom.o time.o reset.o setup.o \
-	platform.o timer.o
+obj-y += prom.o setup.o
 
 obj-$(CONFIG_MACH_JZ4740) += gpio.o
+obj-$(CONFIG_MACH_JZ4770) += jz4770-pm.o
+obj-$(CONFIG_MACH_JZ4740)$(CONFIG_MACH_JZ4780) += \
+	time.o timer.o platform.o reset.o
 
 CFLAGS_setup.o = -I$(src)/../../../scripts/dtc/libfdt
 
@@ -17,4 +19,4 @@ obj-$(CONFIG_JZ4740_QI_LB60)	+= board-qi_lb60.o
 
 # PM support
 
-obj-$(CONFIG_PM) += pm.o
+obj-$(if CONFIG_MACH_JZ4770,,$(CONFIG_PM)) += pm.o
