MIPS: JZ4770: Board support for GCW Zero
The GCW Zero is a handheld game console.

--- a/arch/mips/jz4770/Makefile
+++ b/arch/mips/jz4770/Makefile
@@ -7,6 +7,7 @@
 obj-y += prom.o setup.o
 
 # board specific support
+obj-$(CONFIG_JZ4770_GCW0)	+= board-gcw0.o
 
 # Suspend/resume support
 obj-$(CONFIG_PM_SLEEP)		+= pm.o
