--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -27,6 +27,8 @@ endmenu
 source "drivers/video/backlight/Kconfig"
 source "drivers/video/displays/Kconfig"
 
+source "drivers/gpu/vivante/Kconfig"
+
 config VGASTATE
        tristate
        default n
