clocksource: Add driver for JZ4770 OST
OST is the OS Timer, a 64-bit timer/counter with buffered reading.

Inspired by the jz4780-tcu clocksource driver by Paul Burton. This
new driver has a narrower scope (OST only) and does not rely on any
functionality from jz47xx-tcu.c. Also a protection was added against
incorrect results from simultaneous reading.

Paul Cercueil made access to shared registers happen via syscon.

Signed-off-by: Maarten ter Huurne <maarten@treewalker.org>

--- a/drivers/clocksource/Kconfig
+++ b/drivers/clocksource/Kconfig
@@ -541,4 +541,26 @@ config CLKSRC_ST_LPC
 	  Enable this option to use the Low Power controller timer
 	  as clocksource.
 
+config JZ4770_OST
+	bool "Ingenic JZ47xx Operating System Timer"
+	default y if MACH_JZ4770 || MACH_JZ4780
+	depends on MACH_INGENIC && (MACH_JZ4770 || MACH_JZ4780 || COMPILE_TEST)
+	select CLKSRC_OF
+	help
+	  Support for the OS Timer of the Ingenic JZ4770 or similar SoC.
+
+config JZ4770_OST_CLOCKSOURCE
+	bool "Register as clocksource"
+	default y
+	depends on JZ4770_OST
+	help
+	  Provides a 64-bit clocksource using the OS Timer.
+
+config JZ4770_OST_SCHED_CLOCK
+	bool "Register as sched_clock"
+	default y
+	depends on JZ4770_OST
+	help
+	  Provides a 32-bit sched_clock using the OS Timer.
+
 endmenu
