--- a/arch/mips/jz4740/Kconfig
+++ b/arch/mips/jz4740/Kconfig
@@ -26,6 +26,8 @@ config MACH_JZ4770
 	select MIPS_CPU_SCACHE
 	select SYS_HAS_CPU_MIPS32_R2
 	select SYS_SUPPORTS_HIGHMEM
+	select PINCTRL
+	select MFD_SYSCON
 
 config MACH_JZ4780
 	bool
